HTTPResponse Location header uses URI instead of URL (iss #109)